--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,56 @@ h2 {
     font-size: 3vh;
 }
 
+p, a, ul {
+    font-family: 'Zilla Slab', serif;
+    font-weight: 300;
+}
+
+
+main{
+    text-align: center;
+    padding: 0;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right:0;
+    margin-bottom: 0;
+}
+
+h1 a{
+    color: inherit;
+    text-decoration: none;
+}
+nav {
+    width:100%;
+    background-color: #0D0D0D;
+    overflow: auto;
+    display: flex;
+}
+
+nav a {
+    margin:0 6rem 0 6rem;
+    text-align: center;
+    padding: 1vh;
+    color: white;
+    font-size: 17px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: orange;
+}
+
+
+
 .top-left-site-link {
     position: absolute;
-    top: 1vh;
+    top: 7vh;
     left: 1vw;
+}
+
+.intro-text {
+    color: white;
+    font-size: 2.5vh;
 }
 
 .top-left-site-link a {
@@ -19,69 +65,65 @@ h2 {
     color: inherit;
 }
 
-p, ul {
-    font-family: 'Zilla Slab', serif;
-    font-weight: 300;
-    font-size: 2.5vh;
-}
-
 .bg {
-    background-size: 100vw 100vh;
-}
-
-.bg-title {
-    background-image: linear-gradient(grey, lightgrey);;
-}
-
-.intro-section{
-    margin-top: 0;
-    margin-left: 40vw;
-    text-align: left;
-}
-
-main{
-    text-align: center;
-    padding: 0;
     margin: 0;
 }
 
-h1 a {
-    color: inherit;
-    text-decoration: none;
+.bg-title {
+    background-image: linear-gradient(#3E3535, #595959);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.album-bar a{
-    text-decoration: none;
-    font-size: 0;
+.intro-div {
+    float: left;
+    
+}
+
+.album-div{
+    margin-top: 1vh;
+    margin-right: 1vw;
+    float: right;
 }
 
 .title-font{
-    color: black;
+    color: white;
     text-align: left;
     margin-top: 1vh;
     margin-left: 2vw;
     margin-bottom: 0;
 }
 
-.image-bar{
+.intro-section{
     margin-top: 0;
-    padding: 0;
-    margin-bottom:0;
+    text-align: left;
+    margin-left: 2vw;
+}
+
+
+.album-bar a{
+    text-decoration: none;
+    font-size: 0;
+}
+
+.album-bar{
+    width: 40vw;
 }
 
 
 .image-text-container img {
-    display: block;
-    width: 19.6vw;
-    object-fit: cover;
+    width: 20vw;
+    object-fit: fill;
     height: 40vh;
 }
 
 .image-text-container {
+    float: left;
     position: relative;
-    display: inline-block;
     object-fit: cover;
     overflow: hidden;
+    height: 40vh;
+    width: 20vw;
 
 }
 
@@ -122,7 +164,7 @@ h1 a {
     position: absolute;
     right: 1vh;
     top: 30vh;
-    width: 40vh;
+    width: 50vh;
     height: 70vh;
 }
 
@@ -132,15 +174,30 @@ h1 a {
     width: inherit;
 }
 
+.album-description {
+    font-size: 4vh;
+    text-align: left;
+    margin-left: 10vw;
+}
+
 /*
 the weyes blood portion of the site
 */
+.nav-weyesblood {
+    background-color:#825791;
+}
 
+.nav-weyesblood a {
+    color: #590F1D;
+}
+
+.nav-weyesblood a:hover {
+    color: #F2B694;
+}
 
 .title-card-weyesblood {
     text-align: right;
 }
-
 
 .text-weyesblood {
     color: #F2B694;
@@ -155,7 +212,7 @@ the weyes blood portion of the site
 .title-weyesblood {
     padding: 0;
     margin: 0;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-right: 2vh;
 }
 
@@ -179,7 +236,7 @@ the weyes blood portion of the site
     background-color: #9C71AB;
 }
 
-.table-weyesblood th, td{
+.table-weyesblood th, .table-weyesblood td{
     font-family: 'Zilla Slab', serif;
     color: #590F1D;
     text-align: left;
@@ -189,6 +246,18 @@ the weyes blood portion of the site
 /*
 the death grips portion of the site
 */
+
+.nav-deathgrips {
+    background-color:#735340;
+}
+
+.nav-deathgrips a {
+    color: #BFB895;
+}
+
+.nav-deathgrips a:hover {
+    color: #0D0D0D;
+}
 
 .title-card-deathgrips {
     text-align: right;
@@ -208,7 +277,7 @@ the death grips portion of the site
 .title-deathgrips {
     padding: 0;
     margin: 0;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-right: 2vh;
 }
 
@@ -232,7 +301,7 @@ the death grips portion of the site
     background-color: #8D6D5A;
 }
 
-.table-deathgrips th, td{
+.table-deathgrips th, .table-deathgrips td{
     font-family: 'Zilla Slab', serif;
     color: #BFB895;
     text-align: left;
@@ -242,6 +311,19 @@ the death grips portion of the site
 /*
 the kendrick lamar portion of the site
 */
+
+.nav-kendricklamar {
+    background-color:#262323;
+}
+
+.nav-kendricklamar a {
+    color: #BFBFBF;
+}
+
+.nav-kendricklamar a:hover {
+    color: #403C3B;
+}
+
 .title-card-kendricklamar {
     text-align: right;
 }
@@ -259,7 +341,7 @@ the kendrick lamar portion of the site
 .title-kendricklamar {
     padding: 0;
     margin: 0;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-right: 2vh;
 }
 
@@ -283,7 +365,7 @@ the kendrick lamar portion of the site
     background-color: #403D3D;
 }
 
-.table-kendricklamar th, td{
+.table-kendricklamar th, .table-kendricklamar td{
     font-family: 'Zilla Slab', serif;
     color: #BFBFBF;
     text-align: left;
@@ -293,6 +375,20 @@ the kendrick lamar portion of the site
 /*
 the frank ocean portion of the site
 */
+
+.nav-frankocean {
+    background-color:#FFFFFF;
+}
+
+.nav-frankocean a {
+    color: #455936;
+}
+
+.nav-frankocean a:hover {
+    color: #000000;
+}
+
+
 .title-card-frankocean {
     text-align: right;
 }
@@ -310,7 +406,7 @@ the frank ocean portion of the site
 .title-frankocean {
     padding: 0;
     margin: 0;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-right: 2vh;
 }
 
@@ -334,10 +430,139 @@ the frank ocean portion of the site
     background-color: #CCCCCC;
 }
 
-.table-frankocean th, td{
+.table-frankocean th, .table-frankocean td{
     font-family: 'Zilla Slab', serif;
     color: #455936;
     text-align: left;
     padding: 2px;
 }
 
+/* 
+the burial portion of the site
+*/
+
+.nav-burial {
+    background-color:#595959;
+}
+
+.nav-burial a {
+    color: #8C8C8C;
+}
+
+.nav-burial a:hover {
+    color: #BFBFBF;
+}
+
+.title-card-burial {
+    text-align: right;
+}
+
+
+.text-burial {
+    color: #BFBFBF;
+}
+
+
+.subtitle-burial {
+    padding: 0;
+    margin: 0;
+    margin-right: 1vh;
+}
+.title-burial {
+    padding: 0;
+    margin: 0;
+    margin-top: 5vh;
+    margin-right: 2vh;
+}
+
+.bg-burial {
+    background-color:  #0D0D0D;
+}
+
+.img-burial-album-cover {
+    width: inherit;
+    margin: 0;
+    margin-bottom: -4px;
+    padding: 0;
+}
+
+.table-burial {
+    background-color: #595959;
+    border-collapse: collapse;
+
+}
+.table-burial tr:hover{
+    background-color: #404040;
+}
+
+.table-burial th, .table-burial td{
+    font-family: 'Zilla Slab', serif;
+    color: #8C8C8C;
+    text-align: left;
+    padding: 2px;
+}
+
+/* 
+the burial portion of the site
+*/
+
+.nav-charlixcx {
+    background-color:#D94E8F;
+}
+
+.nav-charlixcx a {
+    color: #590209;
+}
+
+.nav-charlixcx a:hover {
+    color: #D99F7E;
+}
+
+.title-card-charlixcx {
+    text-align: right;
+}
+
+
+.text-charlixcx {
+    color: #D99F7E;
+}
+
+
+.subtitle-charlixcx {
+    padding: 0;
+    margin: 0;
+    margin-right: 1vh;
+}
+.title-charlixcx {
+    padding: 0;
+    margin: 0;
+    margin-top: 5vh;
+    margin-right: 2vh;
+}
+
+.bg-charlixcx {
+    background-color:  #8C8784;
+}
+
+.img-charlixcx-album-cover {
+    width: inherit;
+    margin: 0;
+    margin-bottom: -4px;
+    padding: 0;
+}
+
+.table-charlixcx {
+    background-color: #D94E8F;
+    border-collapse: collapse;
+
+}
+.table-charlixcx tr:hover{
+    background-color: #F368A9;
+}
+
+.table-charlixcx th, .table-charlixcx td{
+    font-family: 'Zilla Slab', serif;
+    color: #590209;
+    text-align: left;
+    padding: 2px;
+}
