changed charli background to darker grey

--- a/styles/style.css
+++ b/styles/style.css
@@ -541,7 +541,7 @@ the burial portion of the site
 }
 
 .bg-charlixcx {
-    background-color:  #8C8784;
+    background-color:  #655B59;
 }
 
 .img-charlixcx-album-cover {
